--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -4,6 +4,7 @@
   "features": {
     "ghcr.io/ministryofjustice/devcontainer-feature/astral:1": {}
   },
+  "postCreateCommand": "bash .devcontainer/post-create.sh",
   "customizations": {
     "vscode": {
       "extensions": [
@@ -13,7 +14,12 @@
         "GitHub.vscode-github-actions",
         "GitHub.vscode-pull-request-github",
         "streetsidesoftware.code-spell-checker"
-      ]
+      ],
+      "settings": {
+        "python.defaultInterpreterPath": "${workspaceFolder}/.venv/bin/python",
+        "python.terminal.activateEnvInCurrentTerminal": true,
+        "python.venvFolders": ["${workspaceFolder}/.venv"]
+      }
     }
   }
 }
