Add Flask application and update dependencies in pyproject.toml and uv.lock
Signed-off-by: GitHub <noreply@github.com>

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -16,3 +16,10 @@ updates:
     commit-message:
       prefix: ":dependabot: github-actions"
       include: "scope"
+  - package-ecosystem: "uv"
+    directory: "/"
+    schedule:
+      interval: "daily"
+    commit-message:
+      prefix: ":dependabot: uv"
+      include: "scope"
