Update CodeQL analysis matrix to include Python
Signed-off-by: GitHub <noreply@github.com>

--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -21,7 +21,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        language: ["actions"]
+        language: ["actions", "python"]
     steps:
       - name: Checkout
         id: checkout
