--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -2,6 +2,7 @@
   "name": "good-repo-poc",
   "image": "ghcr.io/ministryofjustice/devcontainer-base:latest",
   "features": {
+    "ghcr.io/devcontainers/features/docker-in-docker:2": {},
     "ghcr.io/ministryofjustice/devcontainer-feature/astral:1": {}
   },
   "postCreateCommand": "bash .devcontainer/post-create.sh",
