Fix formatting of args in ruff-check hook in pre-commit configuration
Signed-off-by: GitHub <noreply@github.com>

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -17,5 +17,5 @@ repos:
     rev: v0.11.11
     hooks:
       - id: ruff-check
-        args: [ --fix ]
+        args: ["--fix"]
       - id: ruff-format
