Add zizmor hook to pre-commit configuration
Signed-off-by: GitHub <noreply@github.com>

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -13,6 +13,11 @@ repos:
     hooks:
       - id: gitleaks
 
+  - repo: https://github.com/zizmorcore/zizmor-pre-commit
+    rev: v1.8.0
+    hooks:
+      - id: zizmor
+
   - repo: https://github.com/astral-sh/ruff-pre-commit
     rev: v0.11.11
     hooks:
