--- a/test/container-structure-test.yml
+++ b/test/container-structure-test.yml
@@ -9,7 +9,7 @@ commandTests:
   - name: "python"
     command: "python"
     args: ["--version"]
-    expectedOutput: ["Python 3.13.3"]
+    expectedOutput: ["Python 3.13.*"]
 
 fileExistenceTests:
   - name: "/app/main.py"
