Disable JSCPD validation for proof of concept repository
Signed-off-by: GitHub <noreply@github.com>

--- a/.github/workflows/super-linter.yml
+++ b/.github/workflows/super-linter.yml
@@ -38,3 +38,4 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           MULTI_STATUS: false
+          VALIDATE_JSCPD: false # Disabling JSCPD as this repository is a PoC
