--- a/.github/workflows/zizmor.yml
+++ b/.github/workflows/zizmor.yml
@@ -19,9 +19,10 @@ jobs:
       contents: read
       security-events: write
     steps:
-      - name: Monitor GitHub Actions Permissions
-        id: monitor_permissions
-        uses: GitHubSecurityLab/actions-permissions/monitor@31cf7361439cbdffbc73a3bb138b7e1662d46c9b # v1.0.2-beta6
+      # Disabling as this breaks Zizmor
+      # - name: Monitor GitHub Actions Permissions
+      #   id: monitor_permissions
+      #   uses: GitHubSecurityLab/actions-permissions/monitor@31cf7361439cbdffbc73a3bb138b7e1662d46c9b # v1.0.2-beta6
 
       - name: Harden Runner
         id: harden_runner
