🛡️Add Hardening Actions (#2)
Signed-off-by: Jacob Woffenden <jacob@woffenden.io>

--- a/.github/workflows/super-linter.yml
+++ b/.github/workflows/super-linter.yml
@@ -15,6 +15,16 @@ jobs:
       contents: read
       statuses: write
     steps:
+      - name: Monitor GitHub Actions Permissions
+        id: monitor_permissions
+        uses: GitHubSecurityLab/actions-permissions/monitor@31cf7361439cbdffbc73a3bb138b7e1662d46c9b # v1.0.2-beta6
+
+      - name: Harden Runner
+        id: harden_runner
+        uses: step-security/harden-runner@0634a2670c59f64b4a01f0f96f84700a4088b9f0 # v2.12.0
+        with:
+          egress-policy: audit
+
       - name: Checkout
         id: checkout
         uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
@@ -28,3 +38,4 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           MULTI_STATUS: false
+          VALIDATE_JSCPD: false # Disabling JSCPD as this repository is a PoC
