Swith to Docker Hub hosted images Remove PoC suffix
Signed-off-by: GitHub <noreply@github.com>

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [project]
-name = "good-repo-poc"
+name = "good-repo"
 version = "0.0.1"
 description = "Proof of Concept of a good repository"
 readme = "README.md"
