--- a/.github/workflows/zizmor.yml
+++ b/.github/workflows/zizmor.yml
@@ -43,6 +43,7 @@ jobs:
         id: run_zizmor
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          UV_NATIVE_TLS: true
           SSL_CERT_FILE: /home/mitmproxyuser/.mitmproxy/mitmproxy-ca-cert.pem
         run: |
           uvx zizmor --format sarif . > zizmor.sarif
