--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,3 +14,9 @@ dev = [
     "ruff==0.11.11",
     "zizmor==1.8.0",
 ]
+
+[tool.ruff.lint]
+select = ["C", "D", "E", "F", "I", "W"]
+
+[tool.ruff.lint.pydocstyle]
+convention = "google"
